# VoiceForge-Backend

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  container.py  deps.py  router.py
app/api/routes/: health.py  sessions.py  twilio.py  voice_ws.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/domain/: enums.py  models.py
app/infrastructure/: database.py  migrations.py  orm.py  redis_client.py  telemetry.py
app/schemas/: session.py  voice.py
app/services/: conversation_pipeline.py  handoff.py  redaction.py  session_manager.py
app/services/agent/: __init__.py  graph.py  runtime.py  state.py
app/services/stt/: __init__.py  base.py  deepgram.py  deepgram_live.py  google_stt.py  mock.py
app/services/telephony/: __init__.py  audio.py  media_bridge.py  twilio_security.py  warm_transfer.py
app/services/tools/: __init__.py  authz.py  crm.py  knowledge.py  registry.py  tickets.py
app/services/tts/: __init__.py  base.py  elevenlabs.py  google_tts.py  mock.py
scripts/: demo_text_turn.py  demo_twilio_protocol.py  load_soak.py
tests/: test_api.py  test_chaos_soak.py  test_services.py  test_twilio_deepgram.py
