[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voiceforge"
version = "0.1.0"
description = "Production-grade real-time voice agent backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mayur Gohane" }]
dependencies = [
  "fastapi==0.115.14",
  "uvicorn[standard]==0.32.1",
  "websockets==13.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy[asyncio]==2.0.51",
  "alembic==1.14.1",
  "asyncpg==0.30.0",
  "aiosqlite==0.20.0",
  "redis==5.3.1",
  "httpx==0.28.1",
  "python-multipart==0.0.32",
  "structlog==24.4.0",
  "orjson==3.10.6",
  "tenacity==9.0.0",
  "prometheus-client==0.21.1",
  "opentelemetry-api==1.28.2",
  "opentelemetry-sdk==1.28.2",
  "opentelemetry-instrumentation-fastapi==0.49b2",
  "opentelemetry-exporter-otlp-proto-http==1.28.2",
  "google-generativeai==0.8.6",
  "langgraph==0.2.76",
  "langchain-core==0.3.86",
  "langchain-google-genai==2.0.10",
  "email-validator==2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "httpx==0.28.1",
  "ruff==0.15.22",
  "mypy==2.3.0",
]

[project.scripts]
voiceforge = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "soak: load / chaos / staging soak tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = [
  "E501",   # line length — prefer readability in TwiML / long signatures
  "N803",   # Twilio Form field names (From, CallSid, …)
  "N818",   # domain exception names without Error suffix
  "UP017",  # keep timezone.utc for Python 3.10
  "UP042",  # StrEnum backport for Python 3.10
  "SIM105", # try/except pass is clearer around cancel/close
  "B012",   # intentional early exit in Deepgram receiver finally
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
